Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerObject.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        Object var
        return var
    end
end